Fix for combobox width not stretching correctly

--- a/style/uibuilder.css
+++ b/style/uibuilder.css
@@ -135,7 +135,7 @@
 
 .nbtools-dropdown {
     position: relative;
-    display: inline-block;
+    display: inline-flex;
     width: 100%;
 }
 
